--- a/styles.css
+++ b/styles.css
@@ -850,6 +850,7 @@ body {
 .juegos-container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 1rem;
   margin-top: 1rem;
