--- a/css/styles.css
+++ b/css/styles.css
@@ -235,15 +235,18 @@ transform: rotate(-45deg);
   }
   
   
-  .section-juegos{
-    padding: 20px 10px;
-  }
+  
+}
+.section-juegos{
+  padding: 20px 10px;
 }
 .juegos-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Se adapta mejor para 4 columnas */
-  gap: 1rem;
+  grid-template-columns: repeat(4, 1fr); /* Crea 4 columnas */
+  gap: 1rem; /* Espacio entre elementos */
+  width: fit-content; /* Ajusta el ancho al contenido */
 }
+
 
 
 .juego {
