--- a/css/styles.css
+++ b/css/styles.css
@@ -134,10 +134,10 @@ body {
   border-radius: 10px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
 }
+
+
 .header-section {
   display: flex;
-
- 
   align-items: center;
   margin-bottom: 10px;
 }
@@ -243,8 +243,9 @@ transform: rotate(-45deg);
 .section-juegos{
   display: flex;
   justify-content: center;
-
-
+  align-items: center;
+  padding: 30px 20px;
+  background-color: white;
 }
 .juegos-container {
   display: grid;
