--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ transform: rotate(-45deg);
   background-color: white;
 }
 .juegos-container {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(1, 1fr); /* Crea 4 columnas */
   gap: 1rem; /* Espacio entre elementos */
   width: fit-content; /* Ajusta el ancho al contenido */
