--- a/css/estiloformulario.css
+++ b/css/estiloformulario.css
@@ -10,12 +10,15 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #1a1a1a; /* Fondo oscuro */
-    color: #ffffff; /* Texto blanco */
+    background-color: #1a1a1a;
+    /* Fondo oscuro */
+    color: #ffffff;
+    /* Texto blanco */
 }
 
 .form-container {
-    background: #2b2b2b; /* Fondo gris oscuro */
+    background: #2b2b2b;
+    /* Fondo gris oscuro */
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -26,7 +29,8 @@ body {
 h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #ffb700; /* Tono de color vibrante */
+    color: #ffb700;
+    /* Tono de color vibrante */
 }
 
 label {
@@ -52,7 +56,8 @@ select {
 button[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #ffb700; /* Botón con tono vibrante */
+    background-color: #ffb700;
+    /* Botón con tono vibrante */
     color: #333;
     border: none;
     border-radius: 4px;
@@ -63,7 +68,8 @@ button[type="submit"] {
 button[type="button"] {
     display: block;
     margin: 10px 0;
-    background-color: #3498db; /* Azul claro */
+    background-color: #3498db;
+    /* Azul claro */
     color: #fff;
     border: none;
     padding: 8px;
