--- a/css/registro.css
+++ b/css/registro.css
@@ -1,9 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     background: black;
     font-family: 'Roboto', sans-serif;
     color: #fff;
@@ -12,25 +13,29 @@ body{
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    
+
 }
-a{
+
+a {
     text-decoration: none;
     color: #fff;
 }
-a:hover{
+
+a:hover {
     color: #ffb700;
     text-decoration: underline;
- 
+
 }
-.wrapper{
+
+.wrapper {
     width: 100%;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.login_box{
+
+.login_box {
     position: relative;
     width: 400px;
     border: 2px solid #fff;
@@ -40,9 +45,10 @@ a:hover{
     backdrop-filter: blur(50px);
 
 }
-.login-header{
+
+.login-header {
     position: absolute;
-    top: 0 ;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -55,15 +61,17 @@ a:hover{
     box-shadow: 0 0 10px 2px rgba(254, 254, 254, 0.306);
 
 }
-.login-header span{
+
+.login-header span {
     font-size: 20px;
     color: #000000;
 
 
 }
-.login-header::before{
+
+.login-header::before {
     content: '';
-  position: absolute;
+    position: absolute;
     top: 0;
     left: -30px;
     width: 30px;
@@ -72,7 +80,8 @@ a:hover{
     background: transparent;
     box-shadow: 15px 0 0 0 #fff;
 }
-.login-header::after{
+
+.login-header::after {
     content: '';
     position: absolute;
     top: 0;
@@ -83,13 +92,15 @@ a:hover{
     background: transparent;
     box-shadow: -15px 0 0 0 #fff;
 }
-.input_box{
+
+.input_box {
     position: relative;
     display: flex;
     flex-direction: column;
     margin: 20px 0;
 }
-.input-field{
+
+.input-field {
     width: 100%;
     height: 55px;
     font-size: 16px;
@@ -97,49 +108,56 @@ a:hover{
     color: #fff;
     padding-inline: 20px 50px;
     border: 2px solid black;
-    border-radius: 30px;    
+    border-radius: 30px;
     outline: none;
 }
-#user{
+
+#user {
     margin-bottom: 10px;
 }
-.label{
+
+.label {
     position: absolute;
     top: 20px;
     left: 20px;
     transition: .3s;
 }
-.input-field:focus ~ .label,
-.input-field:valid ~ .label{
-position: absolute;
-top: -7px;
-left: 20px;
-font-size: 14px;
-font-weight: 600;
-background: #ffffff;
-color: #000000;
-padding: 0 10px;
-border-radius: 10px;
-box-shadow: 0 0 1px 1px rgba(13, 13, 13, 0.774);
-}
-.input-field:focus ,
-.input-field:valid{
-    border: 2px solid rgb(10, 10, 10); /* Cambia el color del borde al enfocar */
-    color: rgb(0, 0, 0);
-    background-color: white;
-    
+
+.input-field:focus~.label,
+.input-field:valid~.label {
+    position: absolute;
+    top: -7px;
+    left: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    background: #ffffff;
+    color: #000000;
+    padding: 0 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 1px 1px rgba(13, 13, 13, 0.774);
 }
 
-.icon{
+.input-field:focus,
+.input-field:valid {
+    border: 2px solid rgb(10, 10, 10);
+    /* Cambia el color del borde al enfocar */
+    color: rgb(0, 0, 0);
+    background-color: white;
+
+}
+
+.icon {
     position: absolute;
     top: 17px;
     right: 25px;
     font-size: 20px;
 }
-.input-field:focus ~ .icon{
+
+.input-field:focus~.icon {
     color: #ffb700;
 }
-.input_box .input_submit{
+
+.input_box .input_submit {
     width: 100%;
     height: 50px;
     background: #fff;
@@ -151,78 +169,100 @@ box-shadow: 0 0 1px 1px rgba(13, 13, 13, 0.774);
     cursor: pointer;
     transition: .3s;
 }
-.input_box .input_submit:hover{
+
+.input_box .input_submit:hover {
     background: #ffb700;
     color: #000;
     border: 2px solid white;
 }
 
-@media only screen and (max-width: 564px){
-    .wrapper{
+@media only screen and (max-width: 564px) {
+    .wrapper {
         padding: 20px
     }
-    .login_box{
+
+    .login_box {
         padding: 7.5em 1.5em 4em 1.5em;
     }
 }
 
-  /* Estilos adicionales para el autocompletado en foco */
-  input:-webkit-autofill:focus {
-    border: 4px solid rgb(255, 255, 255); /* Cambia el color del borde al enfocar */
+/* Estilos adicionales para el autocompletado en foco */
+input:-webkit-autofill:focus {
+    border: 4px solid rgb(255, 255, 255);
+    /* Cambia el color del borde al enfocar */
     color: rgb(0, 0, 0);
 
-  }
+}
 
-    input:-webkit-autofill {
-        -webkit-text-fill-color: rgb(0, 0, 0); /* Cambia el color del texto */
-        border: 10px solid rgb(255, 255, 255); /* Cambia el color del borde */
-        -webkit-box-shadow: 0 0 0px 105px white inset; /* Cambia el color del fondo */
-    }
-    .error{
-        background-color: #f8d7da; /* Fondo verde claro */
-        color: red; /* Texto verde oscuro */
-        padding: 10px; /* Espaciado interno */
-        border: 1px solid #f5c6cb; /* Borde verde */
-        border-radius: 5px; /* Bordes redondeados */
-        margin-bottom: 20px; /* Espaciado inferior */
-        text-align: center;
-    }
-    .success{
-        background-color: #d4edda; /* Fondo verde claro */
-        color: #155724; /* Texto verde oscuro */
-        padding: 10px; /* Espaciado interno */
-        border: 1px solid #c3e6cb; /* Borde verde */
-        border-radius: 5px; /* Bordes redondeados */
-        margin-bottom: 20px; /* Espaciado inferior */
-        text-align: center;
-    }
-    
-    
-    .button{
-        width: 100%;
-        height: 50px;
-        background: #fff;
-        color: #000;
-        font-size: 16px;
-        font-weight: 600;
-        border: none;
-        border-radius: 30px;
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .button a{
-        color: #000;
-        text-decoration: none;
+input:-webkit-autofill {
+    -webkit-text-fill-color: rgb(0, 0, 0);
+    /* Cambia el color del texto */
+    border: 10px solid rgb(255, 255, 255);
+    /* Cambia el color del borde */
+    -webkit-box-shadow: 0 0 0px 105px white inset;
+    /* Cambia el color del fondo */
+}
 
-    }
-    .button:hover{
-        background: #ffb700;
-        color: #000;
-        border: 2px solid white;
-    }
-    .button svg{
-        margin-right: 10px;
-    }
-   
+.error {
+    background-color: #f8d7da;
+    /* Fondo verde claro */
+    color: red;
+    /* Texto verde oscuro */
+    padding: 10px;
+    /* Espaciado interno */
+    border: 1px solid #f5c6cb;
+    /* Borde verde */
+    border-radius: 5px;
+    /* Bordes redondeados */
+    margin-bottom: 20px;
+    /* Espaciado inferior */
+    text-align: center;
+}
+
+.success {
+    background-color: #d4edda;
+    /* Fondo verde claro */
+    color: #155724;
+    /* Texto verde oscuro */
+    padding: 10px;
+    /* Espaciado interno */
+    border: 1px solid #c3e6cb;
+    /* Borde verde */
+    border-radius: 5px;
+    /* Bordes redondeados */
+    margin-bottom: 20px;
+    /* Espaciado inferior */
+    text-align: center;
+}
+
+
+.button {
+    width: 100%;
+    height: 50px;
+    background: #fff;
+    color: #000;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button a {
+    color: #000;
+    text-decoration: none;
+
+}
+
+.button:hover {
+    background: #ffb700;
+    color: #000;
+    border: 2px solid white;
+}
+
+.button svg {
+    margin-right: 10px;
+}
