--- a/css/styles.css
+++ b/css/styles.css
@@ -255,12 +255,11 @@ transform: rotate(-45deg);
   background-color: white;
 }
 .juegos-container {
-  display: flex;
-  grid-template-columns: repeat(1, 1fr); /* Crea 4 columnas */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Autoajuste de columnas */
   gap: 1rem; /* Espacio entre elementos */
-  width: fit-content; /* Ajusta el ancho al contenido */
+  width: 100%; /* Asegura que el contenedor ocupe todo el ancho */
 }
-
 
 
 .juego {
