--- a/css/estiloformulario.css
+++ b/css/estiloformulario.css
@@ -88,3 +88,14 @@ select:focus {
     outline: none;
     border-color: #ffb700;
 }
+.a{
+    display: block;
+    margin: 10px 0;
+    background-color: #3498db;
+    /* Azul claro */
+    color: #fff;
+    border: none;
+    padding: 8px;
+    border-radius: 4px;
+    cursor: pointer;
+}
